updated versions of jade, express and got express to serve pages

--- a/index.jade
+++ b/index.jade
@@ -1,6 +1,5 @@
-!!! 5
-meta(charset='utf-8')
-html
+doctype html
+html(lang="en")
   head
     title Rhizi
 
@@ -10,4 +9,3 @@ html
     .topbar
       h1 This is some text.
     .main
-      
