--- a/views/index.jade
+++ b/views/index.jade
@@ -6,13 +6,26 @@ html(lang="en")
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     link(href='libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+    link(href='libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
 
 
     //script(type='text/javascript', data-main="main", src="/lib/require.js") //loads main.js
 
   body
-    .topbar
-      h1 This is some text.
+    nav.navbar.navbar-default(role="navigation")
+      .container-fluid
+        .navbar-header
+          a.navbar-brand(href="http://www.rhizi.org") R
+        form.navbar-form.navbar-left
+          .form-group
+            input.form-control(type="text", placeholder="Enter a term")
+          button.btn.btn-default(type="submit")
+            i.fa.fa-search
+        form.navbar-form.navbar-right
+          .form-group
+            input.form-control(type="text", placeholder="Add something")
+          button.btn.btn-default(type="submit")
+            i.fa.fa-plus
     .main
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
