--- a/views/layout.jade
+++ b/views/layout.jade
@@ -5,12 +5,13 @@ html(lang="en")
     meta(charset='utf-8')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
-    link(href='libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
-    link(href='libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
+    link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
+    link(href='/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
+    link(href='/stylesheets/custom.css', rel='stylesheet')
 
   body
     include header
     block content
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
-    script(src='libs/bootstrap/dist/js/bootstrap.min.js')
+    script(src='/libs/bootstrap/dist/js/bootstrap.min.js')
