getting a little model and view working

--- a/public/layout.jade
+++ b/public/layout.jade
@@ -8,6 +8,7 @@ html(lang="en")
     link(href='/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
     link(href='/stylesheets/custom.css', rel='stylesheet')
+    script(type='text/javascript', data-main="/js/main", src="/libs/requirejs/require.js") //loads main.js
 
   body
     include header
