--- a/app/templates/node_circle.html
+++ b/app/templates/node_circle.html
@@ -1,6 +1,6 @@
 <svg height="300px" width="600px">
-  <g class="node" id="node-<%= name %>" >
+  <g class="node" id="node-<%= attributes.name %>" data-node-id="<%= cid %>">
     <circle cx="50" cy="50" r="20" stroke="green" stroke-width="2" fill="yellow"></circle>
-    <text x="50" y="50"><%= name %></text>
+    <text x="50" y="50"><%= attributes.name %></text>
   </g>
 </svg>
