--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -1,7 +1,7 @@
 nav.navbar.navbar-default(role="navigation")
   .container-fluid
     .navbar-header
-      a.navbar-brand(href="http://www.rhizi.org") R
+      a.navbar-brand(href="http://www.rhizi.org") Rhizi
     form#search-form.navbar-form.navbar-left
       .form-group
         input.form-control(type="text", name='search-term' placeholder="Enter a term")
