add sidebar and style

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -1,6 +1,6 @@
 extends layout
 
 block content
-  h1 Hello!
-  #main-area
-  #graph(height='300px', width='600px')
+  #graph
+    button#sidebar-button Toggle Sidebar
+    include sidebar
