--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -1,14 +1,18 @@
-// just test code to make sure less is working
-@nice-blue: #5B83AD;
-@light-blue: @nice-blue + #111;
-@pink: rgb(255, 130, 189);
+@import "colors";
 
-@node-color: @nice-blue;
+@node-color: @gray;
+@connection-color: @gray;
+@stroke-color: @lime;
+@selected-color: @blue;
 
 .node circle {
   cursor: pointer;
-  stroke: @node-color;
-  stroke-width: 3px;
+  stroke: @stroke-color;
+  stroke-width: 2px;
+  fill: @node-color;
+  .selected {
+    stroke: @selected-color;
+  }
 }
 
 .node text {
@@ -18,7 +22,35 @@
 }
 
 .connection {
-  stroke: grey;
-  stroke-width: 8px;
+  stroke: @connection-color;
+  stroke-width: 2px;
   opacity: 0.5;
+}
+
+html, body {
+  height: 100%;
+  overflow: hidden;
+  background: @white;
+}
+
+#graph {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+#sidebar {
+  width: 300px;
+  height: 100%;
+
+  position: absolute;
+  right: 0px;
+  top: 0px;
+
+  background: @blue;
+}
+
+// Overriding Bootstrap defaults
+.navbar {
+  margin-bottom: 0px;
 }
