--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -43,12 +43,24 @@
 
 html,body {
   overflow: hidden;
+  background: rgba(12,16,33,1);
 }
 
-#main-area svg {
+#main-area {
   width:100%;
   height: 100%;
   background: rgba(12,16,33,1);
+
+  svg {
+    width:100%;
+    height: 100%;
+
+  }
+  #toolbar {
+    padding:10px;
+    box-sizing:border-box;
+    overflow:hidden;
+  }
 }
 
 
@@ -56,4 +68,26 @@ html,body {
 
 .navbar {
   margin-bottom:0px;
+  min-height:0px;
+  background:@silver;
+  border:0px;
+  border-radius: 0px;
+}
+
+.navbar-brand {
+  padding:5px;
+  height:auto;
+}
+
+.navbar-default .navbar-brand {
+  color:white;
+}
+
+.navbar-form {
+  padding:0px;
+  margin:0px;
+}
+
+.navbar-form.navbar-right:last-child{
+  margin-right:0px;
 }
