--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -2,4 +2,16 @@ extends layout
 
 block content
   #main-area
-  #graph
+    #toolbar
+      form#search-form.navbar-form.navbar-left
+        .form-group
+          input.form-control(type="text", name='search-term' placeholder="Enter a term")
+        button.btn.btn-default(type="submit")
+          i.fa.fa-search
+      form#add-node-form.navbar-form.navbar-right
+        .form-group
+          input.form-control(type="text", name='node-name', placeholder="Add something")
+        button.btn.btn-default(type="submit")
+          i.fa.fa-plus
+    #graph
+  
