--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -12,13 +12,11 @@
 @text-color: @silver;
 @selected-color: @blue;
 
-
 .node circle {
   cursor: pointer;
   stroke: @node-color;
   stroke-width: 2px;
   fill:@node-color;
-
   .selected {
     stroke: @selected-color;
   }
@@ -46,22 +44,57 @@ html,body {
   background: rgba(12,16,33,1);
 }
 
-#main-area {
+#main-container {
   width:100%;
   height: 100%;
   background: rgba(12,16,33,1);
 
   svg {
+    position:relative;
+    top:-50px;
     width:100%;
     height: 100%;
-
+    z-index:1;
   }
+
   #toolbar {
     padding:10px;
     box-sizing:border-box;
     overflow:hidden;
   }
+
+  #graph {
+  }
+
+  #sidebar-container {
+    
+    #add-container {
+      float:right;
+      padding:10px;
+    }
+    #sidebar {
+      z-index:100;
+      width:300px;
+      height:100%;
+      background:@navy;
+      padding:5px 10px;
+      float:right;
+    }
+    #sidebar.toggled {
+      width:0px;
+
+    }
+    position:absolute;
+    right:0px;
+    top:30px;
+    height:100%;
+    width:600px;
+    box-sizing:border-box;
+    
+    color:@silver;
+  }
 }
+
 
 
 // Overriding Bootstrap defaults
