--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -12,7 +12,10 @@ html(lang="en")
 
   body
     include header
-    block content
+    #main-container
+        include interface
+        block content
+
 
     script(src='https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js')
     script(src='/assets/libs/bootstrap/dist/js/bootstrap.min.js')
