formatting and removal of some unused templates

--- a/app/public/interface.jade
+++ b/app/public/interface.jade
@@ -1,7 +1,7 @@
 #toolbar
       form#search-form.navbar-form.navbar-left
         .form-group
-          input.form-control(type="text", name='search-term' placeholder="Enter a term")
+          input.form-control(type="text", name='search-term' placeholder="Search...")
         button.btn.btn-default(type="submit")
           i.fa.fa-search     
     
