--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -1,7 +1,4 @@
-// See http://clrs.cc/
-@import "_links";
-@import "_skins";
-@import "_variables";
+@import "colors";
 
 @node-color: @gray;
 @text-color: @silver;
@@ -45,7 +42,7 @@ html,body {
   z-index:10;
 
   svg {
-    
+
     width:100%;
     height:100%;
     z-index:2;
@@ -88,7 +85,7 @@ html,body {
     height:100%;
     width:600px;
     box-sizing:border-box;
-    
+
     color:@silver;
   }
 }
