slide out sidebar

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -51,7 +51,7 @@ svg {
   position: absolute;
   padding: 10px;
   overflow: hidden;
-  width: 100%;
+  width: inherit;
 }
 
 #graph {
@@ -64,10 +64,10 @@ svg {
   right: 0px;
   top: 0px;
   height: 100%;
-  color:@silver;
+  color: @silver;
 
-  width:300px;
-  background:@navy;
+  width: 0px;
+  background: @navy;
 }
 
 // Overriding Bootstrap defaults
