--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -70,6 +70,11 @@ svg {
   background:@navy;
 }
 
+.details-container {
+  position:relative;
+  top: 60px;
+}
+
 // Overriding Bootstrap defaults
 
 .navbar {
