Interface stuff done

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -15,5 +15,8 @@ block content
           i.fa.fa-plus
       button#sidebar-toggle.btn.btn-default.navbar-right Toggle Sidebar
     .details-container
+    #zoom-controls
+      i.glyphicon.glyphicon-plus#zoom-in-button
+      i.glyphicon.glyphicon-minus#zoom-out-button
 
   #sidebar
