--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -56,7 +56,7 @@ svg {
 
 #graph {
   width:100%;
-  height: 100%;
+  height:100%;
 }
 
 #sidebar {
@@ -68,6 +68,36 @@ svg {
 
   width: 0px;
   background: @navy;
+}
+
+#zoom-controls {
+  border-radius:4px;
+  border:1px solid @gray;
+  position:absolute;
+  left:10px;
+  bottom:40px;
+  margin:0px;
+
+  i {
+    font-size:16px;
+    padding:10px;
+    top:0px;
+    cursor:pointer;
+  }
+  #zoom-in-button {
+    border-top-left-radius:4px;
+    border-bottom-left-radius:4px;
+  }
+  #zoom-out-button {
+    border-top-right-radius:4px;
+    border-bottom-right-radius:4px;
+  }
+  i:hover {
+    background:@silver;
+  }
+  i:active {
+    color:@black;
+  }
 }
 
 .details-container {
