add zoom buttons to graph

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -59,6 +59,12 @@ svg {
   height: 100%;
 }
 
+#zoom-controls {
+  position: absolute;
+  bottom: 40px;
+  left: 10px;
+}
+
 #sidebar {
   position: absolute;
   right: 0;
