--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -15,5 +15,9 @@ block content
           i.fa.fa-plus
       button#sidebar-toggle.btn.btn-default.navbar-right Toggle Sidebar
     .details-container
-
+    #zoom-controls.btn-group-vertical
+      button.btn.btn-default(type="button")
+        i.glyphicon.glyphicon-plus
+      button.btn.btn-default(type="button")
+        i.glyphicon.glyphicon-minus
   #sidebar
