implement toggling selection color

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -17,6 +17,10 @@
   }
 }
 
+.node.selected circle {
+  fill: @selected-color;
+}
+
 .node text {
   font: 14px sans-serif;
   pointer-events: none;
