--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -16,8 +16,8 @@ block content
       button#sidebar-toggle.btn.btn-default.navbar-right Toggle Sidebar
     .details-container
     #zoom-controls.btn-group-vertical
-      button.btn.btn-default(type="button")
+      button.btn.btn-default
         i.glyphicon.glyphicon-plus
-      button.btn.btn-default(type="button")
+      button.btn.btn-default
         i.glyphicon.glyphicon-minus
   #sidebar
