--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -14,10 +14,6 @@ block content
         button.btn.btn-default(type="submit")
           i.fa.fa-plus
       button#sidebar-toggle.btn.btn-default.navbar-right Toggle Sidebar
-    .details-container
-    #zoom-controls.btn-group-vertical
-      button.btn.btn-default
-        i.glyphicon.glyphicon-plus
-      button.btn.btn-default
-        i.glyphicon.glyphicon-minus
+    #details-container
+
   #sidebar
