DetailsView interface with bootstrap Better dummy nodes

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -70,9 +70,11 @@ svg {
   background: @navy;
 }
 
-.details-container {
-  position:relative;
+#details-container {
+  position:absolute;
   top: 60px;
+  width:250px;
+  left:10px;
 }
 
 // Overriding Bootstrap defaults
