--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -14,6 +14,6 @@ block content
         button.btn.btn-default(type="submit")
           i.fa.fa-plus
       button#sidebar-toggle.btn.btn-default.navbar-right Toggle Sidebar
-    .details-container
+    #details-container
 
   #sidebar
