--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -1,26 +1,27 @@
 <div class="panel panel-default">
-  <!-- Default panel contents -->
   <div class="panel-heading">
-    <h4 class="panel-title">    
+    <h4 class="panel-title">
       <a data-toggle="collapse" data-parent="#details-container" href="#collapse-one">
         <%= attributes.name %>
       </a>
       <div class="pull-right">
-        <button type="button" class="close" aria-hidden="true">&times;</button>
+        <button type="button" class="close" aria-hidden="true">
+          <i class='fa fa-times'></i>
+        </button>
       </div>
     </h4>
   </div>
+
   <div id="collapse-one" class="panel-collapse collapse in">
     <div class="panel-body">
       <p class="lead"><%= attributes.description %></p>
-    <!-- List group -->
-    <p>
-      <ul class="list-group">
-        <% _.each(attributes.tags, function(tag) { %>
-          <li class="list-group-item"><%= tag %></li>
-        <% }); %>
-      </ul>
-    </p>
+      <p>
+        <ul class="list-group">
+          <% _.each(attributes.tags, function(tag) { %>
+            <li class="list-group-item"><%= tag %></li>
+          <% }); %>
+        </ul>
+      </p>
     </div>
   </div>
 </div>
