--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -85,6 +85,12 @@ svg {
   top: 60px;
 }
 
+.data-tooltip-container {
+  position:absolute;
+  top:0px;
+  left:0px;
+}
+
 // Overriding Bootstrap defaults
 
 .navbar {
