got click of line working

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -34,18 +34,18 @@
   opacity: 0.5;
 }
 
-path.link {
+line.link {
   fill: none;
   stroke: #000;
   stroke-width: 4px;
   cursor: default;
 }
 
-path.link.dragline {
+line.link.dragline {
   pointer-events: none;
 }
 
-path.link.hidden {
+line.link.hidden {
   stroke-width: 0;
 }
 
