add way to edit nodes from details pane

--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -22,6 +22,8 @@
           <% }); %>
         </ul>
       </p>
+      <button id="edit-node-button" class="btn btn-default">Edit</button>
     </div>
   </div>
+
 </div>
