hide drag_line until used

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -34,18 +34,18 @@
   opacity: 0.5;
 }
 
-line.link {
+line {
   fill: none;
   stroke: #000;
   stroke-width: 4px;
   cursor: default;
 }
 
-line.link.dragline {
+line.dragline {
   pointer-events: none;
 }
 
-line.link.hidden {
+line.hidden {
   stroke-width: 0;
 }
 
