--- a/app/templates/edit_node_form.html
+++ b/app/templates/edit_node_form.html
@@ -1,4 +1,4 @@
 <form class="form" role="form">
   <div data-fields="name,description,tags"></div>
-  <button id='save-node-button' class="btn btn-default">Save</button>
+  <button id='save-node-button' class="btn btn-default" type="button">Save</button>
 </form>
