--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -87,8 +87,14 @@ svg {
 
 .data-tooltip-container {
   position:absolute;
-  top:0px;
-  left:0px;
+  top: 0px;
+  left: 0px;
+}
+
+.data-tooltip {
+  background: @navy;
+  color: white;
+  border:1px solid @black;
 }
 
 // Overriding Bootstrap defaults
