--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -1,5 +1,9 @@
-<div class="panel panel-info">
+<div class="panel panel-info data-tooltip">
   <div class="panel-body">
-    Panel content <%= x%>
+    <%= attributes.name %>
+    Tags:
+    <% _.each(attributes.tags, function(tag) { %>
+      <span><%= tag %></span>
+    <% }); %>
   </div>
 </div>
