Changed position of data tooltip and bg
#futurebug will visually bug on different sized nodes

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -5,6 +5,7 @@
 @stroke-color: @lime;
 @selected-color: @blue;
 @text-color: @gray;
+@data-tooltip-color: rgba(0,31,63,0.8);
 
 .node circle {
   cursor: pointer;
@@ -92,7 +93,7 @@ svg {
 }
 
 .data-tooltip {
-  background: @navy;
+  background: @data-tooltip-color;
   color: white;
   border:1px solid @black;
 }
