Formatting text change

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -96,6 +96,7 @@ svg {
   background: @data-tooltip-color;
   color: white;
   border:1px solid @black;
+  max-width:300px;
 }
 
 // Overriding Bootstrap defaults
