--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -1,9 +1,15 @@
 <div class="panel panel-info data-tooltip">
   <div class="panel-body">
-    <%= attributes.name %>
-    Tags:
-    <% _.each(attributes.tags, function(tag) { %>
-      <span><%= tag %></span>
-    <% }); %>
+    <b><%= attributes.name %></b>
+    <p>
+      <% if(attributes.description != null){ %>
+        <i><%= attributes.description %></i>
+        </br>
+      <% } %>
+      Tags:
+      <% _.each(attributes.tags, function(tag) { %>
+        <span><%= tag %></span>
+      <% }); %>
+    </p>
   </div>
 </div>
