--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -94,7 +94,7 @@ svg {
 
 .data-tooltip {
   background: @data-tooltip-color;
-  color: white;
+  color: @white;
   border: 1px solid @black;
   max-width: 300px;
 }
