Basic version complete Missing: - Bloodhound - actions

--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -8,6 +8,7 @@ html(lang="en")
     link(href='/assets/libs/bootstrap/dist/css/bootstrap.min.css', rel='stylesheet')
     link(href='/assets/libs/fontawesome/css/font-awesome.min.css', rel='stylesheet')
     link(href='/assets/stylesheets/custom.css', rel='stylesheet')
+    link(href='/assets/stylesheets/typeahead.css', rel='stylesheet')
     script(type='text/javascript', data-main="main", src="/assets/libs/requirejs/require.js") //loads main.js
 
   body
