--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -5,7 +5,7 @@ block content
     #toolbar
       form#search-form.navbar-form.navbar-left
         .form-group
-          input.form-control(type="text", name='search-term' placeholder="Search...")
+          input#search-input.form-control(type="text", name='search-term' placeholder="Search...")
         button.btn.btn-default(type="submit")
           i.fa.fa-search
       form#add-node-form.navbar-form.navbar-right
