Reinstated search button & made button be similar yet different to enter

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -6,6 +6,8 @@ block content
       form#search-form.navbar-form.navbar-left
         .form-group
           input#search-input.form-control(type="text", name='search-term' placeholder="Search...")   
+        button#search-button.btn.btn-default(type="submit")
+          i.fa.fa-search
       form#add-node-form.navbar-form.navbar-right
         .form-group
           input.form-control(type="text", name='node-name', placeholder="Add something")
