--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -19,5 +19,7 @@ block content
         i.glyphicon.glyphicon-plus
       button#zoom-out-button.btn.btn-default
         i.glyphicon.glyphicon-minus
+    #trash-bin
+      i.glyphicon.glyphicon-trash
     #details-container
   #sidebar
