--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -21,3 +21,4 @@ block content
         i.glyphicon.glyphicon-minus
     #details-container
   #sidebar
+    button#edit-node.btn.btn-default Add Node
