--- a/app/templates/edit_form.html
+++ b/app/templates/edit_form.html
@@ -1,4 +1,4 @@
 <form class="form" role="form">
-  <div data-fields="name,description,tags"></div>
+  <div data-fields="name,url,description,tags"></div>
   <button id='save-node-connection-button' class="btn btn-default" type="button">Save</button>
 </form>
