--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -83,12 +83,24 @@ html, body {
 svg {
   width: 100%;
   height: 100%;
+  position:relative;
+  top:-33px;
 }
 
-#toolbar {
+#toolbar-left {
+  z-index:10;
   position: absolute;
   padding: 10px;
-  width: inherit;
+  width: auto;
+}
+
+#toolbar-right {
+  z-index:10;
+  position:relative;
+  height:0px;
+  top:10px;
+  right:10px;
+  width: auto;
 }
 
 #graph {
@@ -97,6 +109,7 @@ svg {
 }
 
 #zoom-controls {
+  z-index:8;
   position: absolute;
   bottom: 40px;
   left: 10px;
@@ -113,6 +126,7 @@ svg {
 }
 
 #trash-bin {
+  z-index:0;
   height: 68px;
   width: 200px;
   font-size: 26pt;
@@ -127,6 +141,7 @@ svg {
 }
 
 #details-container {
+  z-index:9;
   position: absolute;
   top: 60px;
   width: 250px;
