prevent redirect on submit

--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -11,7 +11,7 @@ block content
       form#add-node-form.navbar-form.navbar-right
         .form-group
           input.form-control(type="text", name='node-name', placeholder="Add something")
-        button.btn.btn-default(type="button")
+        button.btn.btn-default(type="submit")
           i.fa.fa-plus
       button#sidebar-toggle.btn.btn-default.navbar-right Toggle Sidebar
     #zoom-controls.btn-group-vertical
