validate node form on edit

--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -16,7 +16,7 @@
     <div class="panel-body">
       <p class="lead"><%= attributes.description %></p>
       <p>
-        <%= attributes.url %><br/>
+        URL: <%= attributes.url %><br/>
         <ul class="list-group">
           <% _.each(attributes.tags, function(tag) { %>
             <li class="list-group-item"><%= tag %></li>
