--- a/app/templates/edit_form.html
+++ b/app/templates/edit_form.html
@@ -1,4 +1,6 @@
 <form class="form" role="form">
   <div data-fields="name,url,description,tags"></div>
-  <button id='save-node-connection-button' class="btn btn-default" type="button">Save</button>
+  <button id='save-node-connection-button' class="btn btn-default" type="submit">
+    Save
+  </button>
 </form>
