--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -3,7 +3,7 @@
 @node-color: @gray;
 @connection-color: @gray;
 @stroke-color: @white;
-@selected-color: @blue;
+@selected-color: #3498db;
 @fixed-color: @orange;
 @text-color: @black;
 @data-tooltip-color: rgba(0,31,63,0.8);
@@ -148,6 +148,10 @@ svg {
 }
 
 // Overriding Bootstrap defaults
+
+.btn {
+  outline:none !important;
+}
 
 .navbar {
   margin-bottom: 0;
