Trash bin hover highlight

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -126,6 +126,10 @@ svg {
   border: 4px dashed lightgray;
   border-radius: 4px;
 }
+#trash-bin.selected {
+  border-color:@selected-color;
+  color:@selected-color;
+}
 
 #details-container {
   position: absolute;
