--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -14,7 +14,7 @@ block content
             input.form-control(type="text", name='node-name', placeholder="Add something")
           button.btn.btn-primary(type="submit")
             i.fa.fa-plus
-        button#sidebar-toggle.btn.btn-primary.navbar-right
+        button#sidebar-toggle.btn.btn-default.navbar-right
           i.fa.fa-arrows-h
     #zoom-controls.btn-group-vertical
       button#zoom-in-button.btn.btn-primary
