Dragline has a pointer now

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -26,7 +26,6 @@
 .node.fixed circle {
   stroke: @fixed-color;
   stroke-dasharray:10;
-  stroke-width:2px;
   stroke-location:outside;
 }
 
@@ -43,6 +42,7 @@
   stroke-width: 8px;
   stroke-linecap:round;
   opacity: 0.5;
+  cursor: pointer;
 }
 
 .connection.selected {
