Improved our removeNode method and added delete button to details view

--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -28,6 +28,11 @@
       <% } else { %>
         <button id="edit-connection-button" class="btn btn-default">Edit</button>
       <% } %>
+      <% if (constructor.name === "NodeModel") {%>
+        <button id="delete-node-button" class="btn btn-warning">Delete</button>
+      <% } else { %>
+        <button id="delete-connection-button" class="btn btn-warning">Delete</button>
+      <% } %>
     </div>
   </div>
 
