made toolbar position absolute to allow for z-indexing

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -152,6 +152,10 @@ svg {
   max-width: 300px;
 }
 
+.toolbar {
+  position: absolute;
+}
+
 .toolbar.right {
   position: absolute;
   right: 15px;
