fix commas in tooltip

--- a/app/templates/data_tooltip.html
+++ b/app/templates/data_tooltip.html
@@ -4,14 +4,12 @@
     <span>
       <% if(attributes.description != null){ %>
         </br>
-        <i><%= attributes.description %></i>   
+        <i><%= attributes.description %></i>
       <% } %>
       <% if(_.some(attributes.tags)){ %>
-      </br>
-      <i class="fa fa-tags"></i>
-      <% _.each(attributes.tags, function(tag) { %>
-        <span><%= tag %>, </span>
-      <% }); %>
+        </br>
+        <i class="fa fa-tags"></i>
+        <span><%= attributes.tags.join(", ") %></span>
       <% } %>
     </span>
   </div>
