increase z-index of left toolbar

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -156,6 +156,10 @@ svg {
   position: absolute;
 }
 
+.toolbar.left {
+  z-index: @controls-z-index + 1;
+}
+
 .toolbar.right {
   position: absolute;
   right: 15px;
