--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -1,4 +1,5 @@
-nav.navbar.navbar-default(role="navigation")
+nav.navbar.navbar-default#menu-bar(role="navigation")
   .container-fluid
     .navbar-header
       a.navbar-brand(href="") GraphDocs
+      p.navbar-text#menu-title Untitled Doc
