--- a/app/public/header.jade
+++ b/app/public/header.jade
@@ -2,4 +2,13 @@ nav.navbar.navbar-default#menu-bar(role="navigation")
   .container-fluid
     .navbar-header
       a.navbar-brand(href="") GraphDocs
-      p.navbar-text#menu-title Untitled Doc
+      ul.nav.nav-pills
+        li.dropdown
+          a.dropdown-toggle(data-toggle='dropdown', href='#')
+            | File
+            span.caret
+          ul.dropdown-menu
+            li(role="presentation")
+              a(href="#") 
+                i No Options
+      input.navbar-text#menu-title(type="text", placeholder="Untitled Doc")
