--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -175,6 +175,10 @@ svg {
 
 // Overriding Bootstrap defaults
 
+#details-container .form-group {
+  margin-bottom: 0px;
+}
+
 .btn {
   outline:none !important;
 }
