Working blur + neighbourhood Changed structure of line

--- a/app/templates/d3_defs.html
+++ b/app/templates/d3_defs.html
@@ -23,3 +23,6 @@
       stroke-location="outside">
   <path d="M0,-5L10,0L0,5"></path>
 </marker>
+<filter id="blur-effect">
+  <feGaussianBlur stdDeviation="2" />
+</filter>
