Compressing the elements and reducing paddings/margins

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -173,6 +173,15 @@ svg {
   display: inline;
 }
 
+.edit-details-form input[type="text"], .edit-details-form button[type="button"] {
+  padding: 2px 5px;
+  height: auto;
+}
+
+.help-block, .form-group, .label {
+  margin: 2px 0px;
+}
+
 // Overriding Bootstrap defaults
 
 .btn {
@@ -190,4 +199,8 @@ svg {
 .navbar-brand {
   padding: 5px;
   height: auto;
+}
+
+.panel-body {
+  padding: 10px 15px;
 }
