--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -178,7 +178,7 @@ svg {
   height: auto;
 }
 
-.help-block, .form-group, .label {
+.edit-details-form .help-block, .edit-details-form .form-group, .edit-details-form .label {
   margin: 2px 0px;
 }
 
