implement conn deletion

--- a/app/templates/edit_form.html
+++ b/app/templates/edit_form.html
@@ -3,5 +3,5 @@
   <button id='save-node-connection-button' class="btn btn-default" type="submit">
     Save
   </button>
-  <button id="delete-node-button" class="btn btn-danger" type="button">Delete</button>
+  <button id="delete-button" class="btn btn-danger" type="button">Delete</button>
 </form>
