clean graphmodel; ease in highlighting

--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -9,6 +9,10 @@
 @data-tooltip-color: rgba(0,31,63,0.8);
 @controls-z-index: 1;
 
+.node {
+  transition: opacity .5s ease-in-out;
+}
+
 .node circle {
   cursor: pointer;
   stroke: @stroke-color;
