add button to expand nodes connections from db

--- a/app/templates/details_box.html
+++ b/app/templates/details_box.html
@@ -27,6 +27,7 @@
       </p>
       <% if (constructor.name === "NodeModel") {%>
         <button id="edit-node-button" class="btn btn-default">Edit</button>
+        <button id="expand-node-button" class="btn btn-primary">Expand</button>
         <button id="remove-node-button" class="btn btn-warning">Remove</button>
       <% } else { %>
         <button id="edit-connection-button" class="btn btn-default">Edit</button>
