add sharing buttons

--- a/app/public/layout.jade
+++ b/app/public/layout.jade
@@ -11,6 +11,8 @@ html(lang="en")
     link(href='/assets/stylesheets/typeahead.css', rel='stylesheet')
     script(type='text/javascript', data-main="main", src="/assets/libs/requirejs/require.js") //loads main.js
 
+    script(type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-53a4394a1db6f8ed") //for AddThis Sharing
+
   body
     include header
     #main-container
