--- a/app/assets/stylesheets/custom.less
+++ b/app/assets/stylesheets/custom.less
@@ -175,6 +175,11 @@ svg {
   right: 15px;
 }
 
+.toolbar.bottom {
+  position: absolute;
+  bottom: 40px;
+}
+
 .controls {
   z-index: @controls-z-index;
 }
