--- a/app/public/index.jade
+++ b/app/public/index.jade
@@ -17,6 +17,8 @@ block content
             i.fa.fa-plus
         button#sidebar-toggle.btn.btn-default
           i.fa.fa-arrows-h
+    .toolbar.bottom.right.controls
+      div.addthis_sharing_toolbox
     #zoom-controls.btn-group-vertical.controls
       button#zoom-in-button.btn.btn-primary
         i.glyphicon.glyphicon-plus
